Add new rooms and organize code for better readability.

--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1199,52 +1199,58 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Preamble</span><span>35 words</span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 1 - Game setup</span><span>115 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Game setup</span><span>114 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 2 - Rooms</span><span>446 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Kitchen, Living room, Library, Basement, Dining room, Attic, Pantry, Study, Bathroom, Garden, Bedroom</i></span></p>
+        <li class="leaded indent1"><span>Part - Rooms</span><span>385 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Bathroom, Utility room, Living room, Library, Basement, Gallery, Balcony, Kitchen, Dining room, Pantry, Closet, Attic, Study, Garden, Bedroom</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 3 - Doors</span><span>102 words&nbsp;<a href="source:story.ni#line77"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, red door, rotating blades</i></span></p>
+        <li class="leaded indent1"><span>Part - Doors</span><span>103 words&nbsp;<a href="source:story.ni#line81"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, rotating blades, red door</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 4 - Items</span><span>266 words&nbsp;<a href="source:story.ni#line95"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>chest, coin, knife, red key, brown key, secret drawer, note, desk in the Entrance hall, rope, fridge, bone, cabinet, small bottle, golden chest, golden key, coins, black chest, black key</i></span></p>
+        <li class="leaded indent1"><span>Part - Items</span><span>172 words&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>red key, rope, fridge, bone, cabinet, small bottle, golden skrinja, golden key, coins, black chest, black key</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 5 - Dying</span><span>357 words&nbsp;<a href="source:story.ni#line145"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Dying</span><span>356 words&nbsp;<a href="source:story.ni#line135"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 6 - Inventory</span><span>332 words&nbsp;<a href="source:story.ni#line216"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Inventory</span><span>358 words&nbsp;<a href="source:story.ni#line205"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>backpack</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 7 - Title screen</span><span>65 words&nbsp;<a href="source:story.ni#line300"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Status line</span><span>55 words&nbsp;<a href="source:story.ni#line294"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 8 - Player's name</span><span>195 words&nbsp;<a href="source:story.ni#line315"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Map</span><span>57 words&nbsp;<a href="source:story.ni#line303"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 9 - Miscellanous</span><span>4 words&nbsp;<a href="source:story.ni#line347"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Title screen</span><span>64 words&nbsp;<a href="source:story.ni#line328"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 10 - Tutorial</span><span>450 words&nbsp;<a href="source:story.ni#line349"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Tutorial</span><span>1015 words&nbsp;<a href="source:story.ni#line343"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 11 - Difficulty</span><span>352 words&nbsp;<a href="source:story.ni#line453"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
+        <li class="leaded indent2"><span>Chapter - Player's name</span><span><span class="indexgrey">194 words</span>&nbsp;<a href="source:story.ni#line345"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 12 - Status line</span><span>56 words&nbsp;<a href="source:story.ni#line526"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Garage</span><span><span class="indexgrey">138 words</span>&nbsp;<a href="source:story.ni#line377"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin3"><span class="indexgrey"><i>brush</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 13 - Map</span><span>58 words&nbsp;<a href="source:story.ni#line535"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Hallway</span><span><span class="indexgrey">31 words</span>&nbsp;<a href="source:story.ni#line403"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 14 - Entrance hall</span><span>435 words&nbsp;<a href="source:story.ni#line560"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>pink drawer, green drawer, red drawer, blue drawer</i></span></p>
+        <li class="leaded indent2"><span>Chapter - Storeroom</span><span><span class="indexgrey">298 words</span>&nbsp;<a href="source:story.ni#line410"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin3"><span class="indexgrey"><i>test chest, coin</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 15 - Basement</span><span>91 words&nbsp;<a href="source:story.ni#line630"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Difficulty</span><span><span class="indexgrey">351 words</span>&nbsp;<a href="source:story.ni#line491"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin3"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Part - Entrance hall</span><span>494 words&nbsp;<a href="source:story.ni#line564"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>note, desk in the Entrance hall, pink drawer, green drawer, red drawer, blue drawer, secret drawer, brown key</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Part - Basement</span><span>90 words&nbsp;<a href="source:story.ni#line639"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>beast</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 16 - Attic</span><span>515 words&nbsp;<a href="source:story.ni#line641"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Attic</span><span>514 words&nbsp;<a href="source:story.ni#line650"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Shop, armor, sausage, necklace, Price</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 17</span><span>130 words&nbsp;<a href="source:story.ni#line746"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Fix</span><span>131 words&nbsp;<a href="source:story.ni#line755"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 18 - Dialog</span><span>152 words&nbsp;<a href="source:story.ni#line770"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Dialog</span><span>151 words&nbsp;<a href="source:story.ni#line779"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Boris</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Chapter 19 - Ending</span><span>54 words&nbsp;<a href="source:story.ni#line793"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Ending</span><span>53 words&nbsp;<a href="source:story.ni#line802"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
@@ -1385,7 +1391,7 @@
         <table border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line682"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line691"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">2 columns x 5 rows</span></i>
@@ -1409,7 +1415,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line774"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line783"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">3 columns x 1 row</span></i>
