--- a/9Zivota.materials/Release/play.html
+++ b/9Zivota.materials/Release/play.html
@@ -81,6 +81,8 @@ vorple.init();
 
 </div>
 <div class="interpretercredit"><a href="https://vorple-if.com">Vorple</a></div>
+<div id="heart-container">
+</div>
 </body>
 </html>
 
