--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1201,56 +1201,59 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Part - Game setup</span><span>114 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Rooms</span><span>385 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Rooms</span><span>380 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Bathroom, Utility room, Living room, Library, Basement, Gallery, Balcony, Kitchen, Dining room, Pantry, Closet, Attic, Study, Garden, Bedroom</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Doors</span><span>103 words&nbsp;<a href="source:story.ni#line81"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, rotating blades, red door</i></span></p>
+        <li class="leaded indent1"><span>Part - Doors</span><span>127 words&nbsp;<a href="source:story.ni#line81"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, rotating blades, red door, secret door</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Items</span><span>166 words&nbsp;<a href="source:story.ni#line99"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Items</span><span>166 words&nbsp;<a href="source:story.ni#line103"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>red key, rope, fridge, bone, cabinet, small bottle, golden skrinja, coins, black chest, black key</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Dying</span><span>304 words&nbsp;<a href="source:story.ni#line135"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Dying</span><span>304 words&nbsp;<a href="source:story.ni#line139"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Inventory</span><span>358 words&nbsp;<a href="source:story.ni#line205"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Inventory</span><span>358 words&nbsp;<a href="source:story.ni#line209"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>backpack</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Status line</span><span>55 words&nbsp;<a href="source:story.ni#line294"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Status line</span><span>55 words&nbsp;<a href="source:story.ni#line298"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Map</span><span>57 words&nbsp;<a href="source:story.ni#line303"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Map</span><span>57 words&nbsp;<a href="source:story.ni#line307"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Title screen</span><span>64 words&nbsp;<a href="source:story.ni#line328"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Title screen</span><span>64 words&nbsp;<a href="source:story.ni#line332"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Tutorial</span><span>1041 words&nbsp;<a href="source:story.ni#line343"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Tutorial</span><span>1041 words&nbsp;<a href="source:story.ni#line347"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Player's name</span><span><span class="indexgrey">194 words</span>&nbsp;<a href="source:story.ni#line345"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Player's name</span><span><span class="indexgrey">194 words</span>&nbsp;<a href="source:story.ni#line349"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Garage</span><span><span class="indexgrey">139 words</span>&nbsp;<a href="source:story.ni#line377"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Garage</span><span><span class="indexgrey">139 words</span>&nbsp;<a href="source:story.ni#line381"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin3"><span class="indexgrey"><i>brush</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Hallway</span><span><span class="indexgrey">31 words</span>&nbsp;<a href="source:story.ni#line403"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Hallway</span><span><span class="indexgrey">31 words</span>&nbsp;<a href="source:story.ni#line407"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Storeroom</span><span><span class="indexgrey">321 words</span>&nbsp;<a href="source:story.ni#line410"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Storeroom</span><span><span class="indexgrey">321 words</span>&nbsp;<a href="source:story.ni#line414"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin3"><span class="indexgrey"><i>test chest, coin, first coin</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Difficulty</span><span><span class="indexgrey">353 words</span>&nbsp;<a href="source:story.ni#line492"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Difficulty</span><span><span class="indexgrey">353 words</span>&nbsp;<a href="source:story.ni#line496"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin3"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Entrance hall</span><span>513 words&nbsp;<a href="source:story.ni#line565"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Entrance hall</span><span>513 words&nbsp;<a href="source:story.ni#line569"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>note, desk in the Entrance hall, pink drawer, green drawer, red drawer, blue drawer, secret drawer, brown key, second coin</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Basement</span><span>996 words&nbsp;<a href="source:story.ni#line642"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Library</span><span>303 words&nbsp;<a href="source:story.ni#line646"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>bookshelf, crown book, sun book, star book, wheel book</i></span></p>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Part - Basement</span><span>996 words&nbsp;<a href="source:story.ni#line695"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>game machine, reward, golden key</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Attic</span><span>514 words&nbsp;<a href="source:story.ni#line779"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Attic</span><span>514 words&nbsp;<a href="source:story.ni#line832"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Shop, armor, sausage, necklace, Price</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Fix</span><span>131 words&nbsp;<a href="source:story.ni#line884"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Fix</span><span>131 words&nbsp;<a href="source:story.ni#line937"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Dialog</span><span>151 words&nbsp;<a href="source:story.ni#line908"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Dialog</span><span>151 words&nbsp;<a href="source:story.ni#line961"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Boris</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Ending</span><span>53 words&nbsp;<a href="source:story.ni#line931"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Ending</span><span>53 words&nbsp;<a href="source:story.ni#line984"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
@@ -1391,7 +1394,7 @@
         <table border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Prizes</b>&nbsp;<a href="source:story.ni#line652"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Prizes</b>&nbsp;<a href="source:story.ni#line705"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">1 definition</span></i>
@@ -1399,7 +1402,7 @@
             </tr>
             <tr>
                 <td align="left" valign="top">
-                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;Some rewards&nbsp;<a href="source:story.ni#line650"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;Some rewards&nbsp;<a href="source:story.ni#line703"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td align="left" valign="top">
                     <i>names</i>
@@ -1415,7 +1418,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Trivia</b>&nbsp;<a href="source:story.ni#line691"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Trivia</b>&nbsp;<a href="source:story.ni#line744"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">3 columns x 20 rows</span></i>
@@ -1447,7 +1450,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line820"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line873"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">2 columns x 5 rows</span></i>
@@ -1471,7 +1474,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line912"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line965"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">3 columns x 1 row</span></i>
@@ -1607,7 +1610,7 @@
                                     <b>Table of Locale Priorities</b>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
                                 <td style="padding-top: 3px;" align="left" valign="top">
-                                    <i><span class="smaller">2 columns x 36 rows (35 blank, one for each thing)</span></i>
+                                    <i><span class="smaller">2 columns x 42 rows (41 blank, one for each thing)</span></i>
                                 </td>
                             </tr>
                             <tr>
