Change item interaction.

--- a/9Zivota.inform/Index/Contents.html
+++ b/9Zivota.inform/Index/Contents.html
@@ -1199,61 +1199,65 @@
         <ul class="leaders">
         <li class="leaded indent1"><span>Preamble</span><span>35 words</span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Game setup</span><span>114 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Game setup</span><span>129 words&nbsp;<a href="source:story.ni#line3"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Rooms</span><span>380 words&nbsp;<a href="source:story.ni#line41"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Rooms</span><span>380 words&nbsp;<a href="source:story.ni#line45"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Garage, Hallway, Storeroom, Entrance hall, Bathroom, Utility room, Living room, Library, Basement, Gallery, Balcony, Kitchen, Dining room, Pantry, Closet, Attic, Study, Garden, Bedroom</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Doors</span><span>127 words&nbsp;<a href="source:story.ni#line81"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, rotating blades, red door, secret door</i></span></p>
+        <li class="leaded indent1"><span>Part - Doors</span><span>127 words&nbsp;<a href="source:story.ni#line89"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>brown door, spike pit, secret door, rotating blades, red door</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Items</span><span>166 words&nbsp;<a href="source:story.ni#line103"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>red key, rope, fridge, bone, cabinet, small bottle, golden skrinja, coins, black chest, black key</i></span></p>
+        <li class="leaded indent1"><span>Part - Items</span><span>169 words&nbsp;<a href="source:story.ni#line111"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>red key, rope, fridge, bone, cabinet, small bottle, golden chest, coins, black chest</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Dying</span><span>304 words&nbsp;<a href="source:story.ni#line139"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Command</span><span>40 words&nbsp;<a href="source:story.ni#line147"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Inventory</span><span>358 words&nbsp;<a href="source:story.ni#line209"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Dying</span><span>298 words&nbsp;<a href="source:story.ni#line153"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Part - Inventory</span><span>367 words&nbsp;<a href="source:story.ni#line223"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>backpack</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Status line</span><span>55 words&nbsp;<a href="source:story.ni#line298"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Status line</span><span>55 words&nbsp;<a href="source:story.ni#line308"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Map</span><span>57 words&nbsp;<a href="source:story.ni#line307"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Map</span><span>57 words&nbsp;<a href="source:story.ni#line317"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Title screen</span><span>64 words&nbsp;<a href="source:story.ni#line332"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Title screen</span><span>64 words&nbsp;<a href="source:story.ni#line342"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Tutorial</span><span>1041 words&nbsp;<a href="source:story.ni#line347"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Tutorial</span><span>1041 words&nbsp;<a href="source:story.ni#line357"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Player's name</span><span><span class="indexgrey">194 words</span>&nbsp;<a href="source:story.ni#line349"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Player's name</span><span><span class="indexgrey">194 words</span>&nbsp;<a href="source:story.ni#line359"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Garage</span><span><span class="indexgrey">139 words</span>&nbsp;<a href="source:story.ni#line381"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Garage</span><span><span class="indexgrey">139 words</span>&nbsp;<a href="source:story.ni#line391"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin3"><span class="indexgrey"><i>brush</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Hallway</span><span><span class="indexgrey">31 words</span>&nbsp;<a href="source:story.ni#line407"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Hallway</span><span><span class="indexgrey">31 words</span>&nbsp;<a href="source:story.ni#line417"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Storeroom</span><span><span class="indexgrey">321 words</span>&nbsp;<a href="source:story.ni#line414"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Storeroom</span><span><span class="indexgrey">321 words</span>&nbsp;<a href="source:story.ni#line424"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin3"><span class="indexgrey"><i>test chest, coin, first coin</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent2"><span>Chapter - Difficulty</span><span><span class="indexgrey">353 words</span>&nbsp;<a href="source:story.ni#line496"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Difficulty</span><span><span class="indexgrey">353 words</span>&nbsp;<a href="source:story.ni#line506"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin3"><span class="indexgrey"><i>Difficulty, normal, hard, unforgiving, unknown</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Entrance hall</span><span>513 words&nbsp;<a href="source:story.ni#line569"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Entrance hall</span><span>529 words&nbsp;<a href="source:story.ni#line579"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>note, desk in the Entrance hall, pink drawer, green drawer, red drawer, blue drawer, secret drawer, brown key, second coin</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Library</span><span>303 words&nbsp;<a href="source:story.ni#line646"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>bookshelf, crown book, sun book, star book, wheel book</i></span></p>
+        <li class="leaded indent1"><span>Part - Library</span><span>352 words&nbsp;<a href="source:story.ni#line660"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin2"><span class="indexgrey"><i>bookshelf, puzzle-book, crown book, star book, wheel book, sun book</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Basement</span><span>996 words&nbsp;<a href="source:story.ni#line695"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Basement</span><span>996 words&nbsp;<a href="source:story.ni#line715"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>game machine, reward, golden key</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Attic</span><span>514 words&nbsp;<a href="source:story.ni#line832"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
-        <p class="hangingin2"><span class="indexgrey"><i>Shop, armor, sausage, necklace, Price</i></span></p>
+        <li class="leaded indent1"><span>Part - Attic</span><span>515 words&nbsp;<a href="source:story.ni#line852"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Fix</span><span>131 words&nbsp;<a href="source:story.ni#line937"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent2"><span>Chapter - Attic items</span><span><span class="indexgrey">362 words</span>&nbsp;<a href="source:story.ni#line874"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <p class="hangingin3"><span class="indexgrey"><i>Shop, black key, armor, sausage, necklace, Price</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Dialog</span><span>151 words&nbsp;<a href="source:story.ni#line961"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Fix</span><span>131 words&nbsp;<a href="source:story.ni#line955"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders">
+        <li class="leaded indent1"><span>Part - Dialog</span><span>151 words&nbsp;<a href="source:story.ni#line979"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey"><i>Boris</i></span></p>
         <ul class="leaders">
-        <li class="leaded indent1"><span>Part - Ending</span><span>53 words&nbsp;<a href="source:story.ni#line984"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <li class="leaded indent1"><span>Part - Ending</span><span>53 words&nbsp;<a href="source:story.ni#line1002"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p>EXTENSIONS</p>
         <p class="hangingin2"><span class="indexgrey">Included from the source text</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Notifications &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Notifications.html' title="Vorple Notifications by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1058 words&nbsp;<a href="source:story.ni#line5"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
@@ -1262,6 +1266,8 @@
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Hyperlinks &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Hyperlinks.html' title="Vorple Hyperlinks by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1817 words&nbsp;<a href="source:story.ni#line11"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Tooltips &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Tooltips.html' title="Vorple Tooltips by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>1801 words&nbsp;<a href="source:story.ni#line13"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple Status Line &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Status%20Line.html' title="Vorple Status Line by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>2205 words&nbsp;<a href="source:story.ni#line15"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Modal Windows &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Modal%20Windows.html' title="Vorple Modal Windows by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>700 words&nbsp;<a href="source:story.ni#line17"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
+        <ul class="leaders"><li class="leaded indent2"><span>Vorple Command Prompt Control &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple%20Command%20Prompt%20Control.html' title="Vorple Command Prompt Control by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>2086 words&nbsp;<a href="source:story.ni#line19"><img border=0 src=inform:/doc_images/Reveal.png></a></span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Notifications</span></p>
         <ul class="leaders"><li class="leaded indent2"><span>Vorple &nbsp;<a href='inform://Extensions/Extensions/Juhana%20Leinonen/Vorple.html' title="Vorple by Juhana Leinonen" style="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a>&nbsp;&nbsp;by Juhana Leinonen <span class="smaller">version 4.0.1</span> </span><span>5666 words</span></li></ul>
         <p class="hangingin2"><span class="indexgrey">Included by the extension Vorple Screen Effects</span></p>
@@ -1394,7 +1400,7 @@
         <table border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Prizes</b>&nbsp;<a href="source:story.ni#line705"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Prizes</b>&nbsp;<a href="source:story.ni#line725"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">1 definition</span></i>
@@ -1402,7 +1408,7 @@
             </tr>
             <tr>
                 <td align="left" valign="top">
-                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;Some rewards&nbsp;<a href="source:story.ni#line703"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;col 1:&nbsp;&nbsp;Some rewards&nbsp;<a href="source:story.ni#line723"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td align="left" valign="top">
                     <i>names</i>
@@ -1418,7 +1424,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Trivia</b>&nbsp;<a href="source:story.ni#line744"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Trivia</b>&nbsp;<a href="source:story.ni#line764"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">3 columns x 20 rows</span></i>
@@ -1450,10 +1456,10 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line873"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Shop Items</b>&nbsp;<a href="source:story.ni#line892"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <i><span class="smaller">2 columns x 5 rows</span></i>
+                    <i><span class="smaller">2 columns x 4 rows</span></i>
                 </td>
             </tr>
             <tr>
@@ -1474,7 +1480,7 @@
             </tr>
             <tr>
                 <td style="padding-top: 3px;" align="left" valign="top">
-                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line965"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>Table of Boris Responses</b>&nbsp;<a href="source:story.ni#line983"><img border=0 src=inform:/doc_images/Reveal.png></a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
                 <td style="padding-top: 3px;" align="left" valign="top">
                     <i><span class="smaller">3 columns x 1 row</span></i>
