--- a/9Zivota.inform/Index/Details/80_A.html
+++ b/9Zivota.inform/Index/Details/80_A.html
@@ -885,18 +885,18 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Attic</b><br><b>purchase</b></p>
+    <p><b>Defined in the source - Attic items</b><br><b>purchase</b></p>
     <hr>
-    <p><b>Purchase <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line914"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one thing</p>
+    <p><b>Purchase <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line932"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one thing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;buy [thing]&quot;&nbsp;<a href="source:story.ni#line915"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>purchase</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;buy [thing]&quot;&nbsp;<a href="source:story.ni#line933"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>purchase</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line587"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line917"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line925"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">report&nbsp;&nbsp;&nbsp;&nbsp;(say "You now have [price of player] remaining in your wallet.")&nbsp;<a href="source:story.ni#line934"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line597"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line935"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line943"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">report&nbsp;&nbsp;&nbsp;&nbsp;(say "You now have [price of player] remaining in your wallet.")&nbsp;<a href="source:story.ni#line952"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
