--- a/9Zivota.inform/Index/Details/83_A.html
+++ b/9Zivota.inform/Index/Details/83_A.html
@@ -885,18 +885,16 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Attic items</b><br><b>purchase</b></p>
+    <p><b>Defined in the source - Basement</b><br>startgame&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, showrules&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>showprizes</b></p>
     <hr>
-    <p><b>Purchase <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line1334"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one thing</p>
+    <p><b>Showprizes </b>&nbsp;<a href="source:story.ni#line1083"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;buy [thing]&quot;&nbsp;<a href="source:story.ni#line1335"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>purchase</i>&nbsp;<a href=Details/83_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;prizes&quot;&nbsp;<a href="source:story.ni#line1083"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>showprizes</i>&nbsp;<a href=Details/83_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line674"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1345"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line1372"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">report&nbsp;&nbsp;&nbsp;&nbsp;(say "You now have [price of player] remaining in your wallet.")&nbsp;<a href="source:story.ni#line1384"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "You can win:[line break]"; ...)&nbsp;<a href="source:story.ni#line1085"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
