--- a/9Zivota.inform/Index/Details/85_A.html
+++ b/9Zivota.inform/Index/Details/85_A.html
@@ -885,16 +885,17 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Bedroom (Ending)</b><br><b>casting meow</b></p>
+    <p><b>Defined in the source - Study</b><br><b>casting player name</b></p>
     <hr>
-    <p><b>Casting meow </b>&nbsp;<a href="source:story.ni#line1409"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast meow): applying to nothing</p>
+    <p><b>Casting player name </b>&nbsp;<a href="source:story.ni#line1439"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast player name): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;meow&quot;&nbsp;<a href="source:story.ni#line1407"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting meow</i>&nbsp;<a href=Details/85_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;cast name&quot;&nbsp;<a href="source:story.ni#line1438"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting player name</i>&nbsp;<a href=Details/85_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line674"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1411"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1441"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "You disappear into a cloud of fog."; ...)&nbsp;<a href="source:story.ni#line1445"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
