--- a/9Zivota.inform/Index/Details/86_A.html
+++ b/9Zivota.inform/Index/Details/86_A.html
@@ -885,15 +885,16 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Achievements</b><br><b>listing all achievements</b></p>
+    <p><b>Defined in the source - Bedroom (Ending)</b><br><b>casting meow</b></p>
     <hr>
-    <p><span class="indexdullred"><b>Listing all achievements </span></b>&nbsp;<a href="source:story.ni#line1442"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> listed all achievements): out of world</p>
+    <p><b>Casting meow </b>&nbsp;<a href="source:story.ni#line1453"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast meow): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p><span class="indexdullred">&quot;all achievements&quot;&nbsp;<a href="source:story.ni#line1441"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>listing all achievements</i>&nbsp;<a href=Details/86_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></span><br>
+    <p>&quot;meow&quot;&nbsp;<a href="source:story.ni#line1451"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting meow</i>&nbsp;<a href=Details/86_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let unlocked be 0; ...)&nbsp;<a href="source:story.ni#line1444"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1455"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
