--- a/9Zivota.inform/Index/Details/80_A.html
+++ b/9Zivota.inform/Index/Details/80_A.html
@@ -885,17 +885,16 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Basement</b><br><b>startgame</b>, showrules&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, showprizes&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+    <p><b>Defined in the source - Secret ending</b><br><b>living room ending</b></p>
     <hr>
-    <p><b>Startgame </b>&nbsp;<a href="source:story.ni#line1019"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
+    <p><b>Living room ending </b>&nbsp;<a href="source:story.ni#line874"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> lived room ending): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;start&quot;&nbsp;<a href="source:story.ni#line1019"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>startgame</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;***&quot;&nbsp;<a href="source:story.ni#line873"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>living room ending</i>&nbsp;<a href=Details/80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line674"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1021"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(now the quiz_active of the game machine is true; ...)&nbsp;<a href="source:story.ni#line1029"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line876"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
