--- a/9Zivota.inform/Index/Details/81_A.html
+++ b/9Zivota.inform/Index/Details/81_A.html
@@ -885,16 +885,17 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Basement</b><br>startgame&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>showrules</b>, showprizes&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
+    <p><b>Defined in the source - Basement</b><br><b>startgame</b>, showrules&nbsp;<a href=82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, showprizes&nbsp;<a href=83_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
     <hr>
-    <p><b>Showrules </b>&nbsp;<a href="source:story.ni#line1036"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
+    <p><b>Startgame </b>&nbsp;<a href="source:story.ni#line1061"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;rules&quot;&nbsp;<a href="source:story.ni#line1036"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>showrules</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;start&quot;&nbsp;<a href="source:story.ni#line1061"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>startgame</i>&nbsp;<a href=Details/81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line674"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "Pravila[line break]")&nbsp;<a href="source:story.ni#line1038"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1063"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(now the quiz_active of the game machine is true; ...)&nbsp;<a href="source:story.ni#line1071"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
