--- a/9Zivota.inform/Index/Details/82_A.html
+++ b/9Zivota.inform/Index/Details/82_A.html
@@ -885,16 +885,16 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Basement</b><br>startgame&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, showrules&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>showprizes</b></p>
+    <p><b>Defined in the source - Basement</b><br>startgame&nbsp;<a href=81_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>showrules</b>, showprizes&nbsp;<a href=83_A.html><img border=0 src=inform:/doc_images/Beneath.png></a></p>
     <hr>
-    <p><b>Showprizes </b>&nbsp;<a href="source:story.ni#line1041"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
+    <p><b>Showrules </b>&nbsp;<a href="source:story.ni#line1078"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to nothing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;prizes&quot;&nbsp;<a href="source:story.ni#line1041"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>showprizes</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;rules&quot;&nbsp;<a href="source:story.ni#line1078"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>showrules</i>&nbsp;<a href=Details/82_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line674"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "You can win:[line break]"; ...)&nbsp;<a href="source:story.ni#line1043"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "Answer to picture-based questions should be given by writing the capital letter corresponding to the option you think is correct (e.g. A)[line break]For math questions, the answer should be a number only, using the units from the question, but without writing the unit itself (e.g. 190).[line break]For all other types of questions, respond with one word, capitalized (e.g. Silence).")&nbsp;<a href="source:story.ni#line1080"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
