--- a/9Zivota.inform/Index/Details/84_A.html
+++ b/9Zivota.inform/Index/Details/84_A.html
@@ -885,17 +885,18 @@
     </table>
 
     <hr>
-    <p><b>Defined in the source - Study</b><br><b>casting player name</b></p>
+    <p><b>Defined in the source - Attic items</b><br><b>purchase</b></p>
     <hr>
-    <p><b>Casting player name </b>&nbsp;<a href="source:story.ni#line1395"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> cast player name): applying to nothing</p>
+    <p><b>Purchase <span class="indexdullblue">something</span> </b>&nbsp;<a href="source:story.ni#line1378"><img border=0 src=inform:/doc_images/Reveal.png></a> (<i>past tense</i> ): applying to one thing</p>
     <hr>
     <p><b>Typed commands leading to this action</b></p>
-    <p>&quot;cast name&quot;&nbsp;<a href="source:story.ni#line1394"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>casting player name</i>&nbsp;<a href=Details/84_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
+    <p>&quot;buy [thing]&quot;&nbsp;<a href="source:story.ni#line1379"><img border=0 src=inform:/doc_images/Reveal.png></a> - <i>purchase</i>&nbsp;<a href=Details/84_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><br>
     </p>
     <p><b>Rules controlling this action</b></p>
-    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line674"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1397"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
-    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(say "You disappear into a cloud of fog."; ...)&nbsp;<a href="source:story.ni#line1401"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p><p class="indentin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>doing anything other than examining to the secret drawer when the secret drawer is scenery</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line679"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">check&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line1389"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">carry out&nbsp;&nbsp;&nbsp;&nbsp;(let price wanted be $0; ...)&nbsp;<a href="source:story.ni#line1416"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
+    <p class="indentin2">report&nbsp;&nbsp;&nbsp;&nbsp;(say "You now have [price of player] remaining in your wallet.")&nbsp;<a href="source:story.ni#line1428"><img border=0 src=inform:/doc_images/Reveal.png></a></p>
     </p>
 
     <!--CONTENT ENDS-->
